<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/layout">

    <data>
        <variable
                name="viewmodel"
                type="at.htlleonding.mqttclient.MainActivityViewModel"/>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

        <TextView
                android:id="@+id/tv_status_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.statusMessage}"
                tools:text="@string/txt_status_not_connected"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:background="#e9ab90"
                android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.0"/>

        <EditText
                android:id="@+id/et_server_uri"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@={viewmodel.serverUri, default="Server Uri"}'
                android:inputType="textUri"
                android:ems="10"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_status_message"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <EditText
                android:id="@+id/et_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@={viewmodel.topic, default="#"}'
                android:inputType="textUri"
                android:ems="10"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintTop_toBottomOf="@+id/et_server_uri"/>
        <TextView
                android:id="@+id/tv_rgb_led"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:text="@string/txt_rgb_led"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginStart="64dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_connect"
                app:layout_constraintStart_toStartOf="parent"
        />
        <TextView
                android:id="@+id/tv_rgb_led_color"
                android:text="@={viewmodel.rgbLedColor}"
                tools:text="990000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/iv_rgb_led"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_rgb_led"/>
        <Button
                android:id="@+id/btn_connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text='@{viewmodel.connectBtnText, default="CONNECT"}'
                tools:text="@string/btn_txt_connect"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/et_topic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.011"/>

<!--
         <ImageView
                android:id="@+id/iv_rgb_led"
                android:layout_width="72dp"
                android:layout_height="84dp"
                app:srcCompat="@drawable/ic_light_off"
                android:layout_marginTop="8dp"
                android:layout_marginStart="64dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_connect"
                app:layout_constraintStart_toEndOf="@+id/tv_rgb_led"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.168"
                app:layout_constraintVertical_bias="0.0"/>
-->

        <com.sdsmdg.harjot.vectormaster.VectorMasterView
                android:id="@+id/iv_rgb_led"
                android:layout_width="72dp"
                android:layout_height="84dp"
                app:vector_src="@drawable/ic_light_on"
                android:layout_marginTop="8dp"
                android:layout_marginStart="64dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/btn_connect"
                app:layout_constraintStart_toEndOf="@+id/tv_rgb_led"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.168"
                app:layout_constraintVertical_bias="0.0"
        />

        <com.skydoves.colorpickerview.ColorPickerView
                android:id="@+id/cpv_color_picker_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:palette="@drawable/palette"
                app:selector="@drawable/wheel"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.466"
                app:layout_constraintVertical_bias="0.959"/>

        <TextView
                android:id="@+id/tv_temperature_label"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:text="@string/txt_temperature"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tv_rgb_led_color"
                app:layout_constraintVertical_bias="0.054"/>
        <TextView
                android:id="@+id/tv_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.temperature, default=0.0}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toEndOf="@+id/tv_temperature_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.266"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_temperature_label"/>
        <TextView
                android:id="@+id/tv_humidity_label"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:text="@string/txt_humidity"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="76dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_temperature_label"
                app:layout_constraintVertical_bias="0.028"/>
        <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.humidity, default=0.0}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_humidity_label"
                app:layout_constraintHorizontal_bias="0.263"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_humidity_label"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
